Fix border and home button

--- a/custom_components/sunseeker/translations/da.json
+++ b/custom_components/sunseeker/translations/da.json
@@ -26,7 +26,7 @@
 				"name": "Robot status",
 				"state": {
 					"Standby": "Standby",
-					"Mowing": "Arbejder",
+					"Mowing": "Klipper",
 					"On the way home": "På vej hjem",
 					"Charging": "Oplader",
 					"Mowing border": "Klipper kant",
@@ -111,7 +111,7 @@
 			"sunseeker_lawnmower": {
                 "state": {
 					"Standby": "Standby",
-					"Mowing": "Arbejder",
+					"Mowing": "Klipper",
 					"On the way home": "På vej hjem",
 					"Charging": "Oplader",
 					"Mowing border": "Klipper kant",
