--- a/custom_components/sunseeker/translations/en.json
+++ b/custom_components/sunseeker/translations/en.json
@@ -168,7 +168,19 @@
         },
         "sunseeker_zone4": {
           "name": "Zone 4 start"
-        }
+        },
+				"sunseeker_mulpro1": {
+				  "name": "Zone 1 priority"
+			  },
+			  "sunseeker_mulpro2": {
+				  "name": "Zone 2 priority"
+			  },
+			  "sunseeker_mulpro3": {
+				  "name": "Zone 3 priority"
+			  },
+			  "sunseeker_mulpro4": {
+				  "name": "Zone 4 priority"
+			  }
       },
       "text": {
         "sunseeker_schedule_text_1": {
