--- a/custom_components/sunseeker/translations/en.json
+++ b/custom_components/sunseeker/translations/en.json
@@ -55,11 +55,11 @@
         "sunseeker_wifi_level": {
           "name": "Wifi strength"
         },
-              "sunseeker_rain_status": {
+        "sunseeker_rain_status": {
           "name": "Rain sensor",
           "state": {
             "Dry": "Dry",
-            "Dry countdown": "Dry countdownr",
+            "Dry countdown": "Dry countdown",
             "Wet": "Wet",
             "Unknown": "Unknown"
           }
