Fix mower status not updating.

--- a/custom_components/sunseeker/translations/da.json
+++ b/custom_components/sunseeker/translations/da.json
@@ -133,7 +133,11 @@
 			},
 			"sunseeker_home": {
 				"name": "Hjem"
+			},
+			"sunseeker_stop": {
+				"name": "Stop"
 			}
+
 		},
 		"device_tracker": {
 			"sunseeker_tracker": {
