--- a/custom_components/sunseeker/translations/en.json
+++ b/custom_components/sunseeker/translations/en.json
@@ -132,6 +132,9 @@
         },
         "sunseeker_home": {
           "name": "Home"
+        },
+        "sunseeker_stop": {
+          "name": "Stop"
         }
       },
       "device_tracker": {
