--- a/custom_components/sunseeker/translations/de.json
+++ b/custom_components/sunseeker/translations/de.json
@@ -1,7 +1,7 @@
 {
     "config": {
         "abort": {
-            "already_configured": "Account bereit konfiguriert"
+            "already_configured": "Account bereits konfiguriert"
         },
         "error": {
             "connection_error": "Verbindung fehlgeschlagen"
